--- a/src/app/components/admin-panel/admin-panel.html
+++ b/src/app/components/admin-panel/admin-panel.html
@@ -237,6 +237,10 @@
             <button class="btn btn-danger btn-sm me-1" (click)="deleteSong(song.id)">
               <i class="fas fa-trash me-1"></i>Eliminar
             </button>
+            <button class="btn btn-warning" (click)="forceRankSong()">
+              <i class="fas fa-trophy me-1"></i>
+              Forzar Ranking
+            </button>
           </div>
         </div>
       </div>
