--- a/src/app/components/admin-panel/admin-panel.html
+++ b/src/app/components/admin-panel/admin-panel.html
@@ -183,7 +183,11 @@
     </div>
   </div>
 </div>
-
+<button class="btn btn-warning btn-sm me-2" (click)="forceRankSong()" 
+        [disabled]="!adminCurrentlyPlaying || !adminCurrentlyPlaying.is_playing">
+  <i class="fas fa-trophy me-1"></i>
+  Agregar al Ranking
+</button>
 <div class="card">
   <div class="card-header d-flex justify-content-between align-items-center">
     <h5 class="mb-0">Canciones más votadas</h5>
@@ -196,6 +200,7 @@
       </button>
     </div>
   </div>
+  
   <div class="card-body">
     <div *ngIf="isLoading" class="text-center py-3">
       <i class="fas fa-spinner fa-spin fa-2x"></i>
@@ -236,10 +241,6 @@
             </button>
             <button class="btn btn-danger btn-sm me-1" (click)="deleteSong(song.id)">
               <i class="fas fa-trash me-1"></i>Eliminar
-            </button>
-            <button class="btn btn-warning" (click)="forceRankSong()">
-              <i class="fas fa-trophy me-1"></i>
-              Forzar Ranking
             </button>
           </div>
         </div>
