ranking songs funcional

--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -20,6 +20,10 @@
 
           <p>-Solo se puede votar una vez por cancion </p>
 
+          <p>-Toda Cacion Reproducida va para Ranking Historico</p>
+
+          <p>-Cancion con menos de 10 votos no se tiene en cuenta para ser reproducidas</p>
+
           <p>-Cada semana se eliminaran todas las canciones del Ranking </p>
           
           <p>-El administrador tiene la potestad de evaluar cada sugerencia y decidir si es apropiada para el momento o ambiente.</p>
